Added apps to website and index

--- a/CareerPath.html
+++ b/CareerPath.html
@@ -6,13 +6,13 @@
 -->
 <html>
 	<head>
-		<title>Home Page</title>
+		<title>CareerPath</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="homepage is-preload">
+	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -21,21 +21,19 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<img src="images/logo.png" alt="">
 								<h1><a href="index.html" id="logo">TechnicallyEqual</a></h1>
 							</header>
-							
 						</div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#">Home</a></li>
+								<li><a href="index.html">Home</a></li>
 								<li>
 									<a href="#">Our Products</a>
 									<ul>
 										<li><a href="TechLearn.html">TechLearn</a></li>
-										<li><a href="CareerPath.html">CareerPath</a></li>
+										<li><a href="#">CareerPath</a></li>
 										<li><a href="InclusiveCode.html">InclusiveCode</a></li>
 										<li><a href="TechConnect.html">TechConnect</a></li>
 										<li><a href="DiversityAnalytics.html">DiversityAnalytics</a></li>
@@ -45,146 +43,94 @@
 							</ul>
 						</nav>
 
+
 				</div>
-
-			<!-- Banner -->
-				<section id="banner">
-					<header>
-						<h2>Empowering Women in Tech <br><strong>TechnicallyEqual</strong></h2>
-						<p>
-							"Celebriamo il potenziale illimitato delle donne nel digitale, superando le barriere di genere e creando un futuro tecnologico inclusivo e innovativo."
-						</p>
-					</header>
-				</section>
-
-			<!-- Carousel -->
-				<section class="carousel">
-					<h2>I NOSTRI <strong>TRAGUARDI</strong></h2>
-					<div class="reel">
-
-						<article>
-							<div class="image featured"><img src="images/pic01.jpg" alt="" /></div>
-							<header>
-								<h3>Impatto globale</h3>
-							</header>
-							<p>TechnicallyEqual espande la sua influenza a livello globale, collaborando con organizzazioni internazionali e governative.</p>
-						</article>
-
-						<article>
-							<div class="image featured"><img src="images/pic02.jpg" alt="" /></div>
-							<header>
-								<h3>Crescita della community</h3>
-							</header>
-							<p> La community di TechnicallyEqual cresce rapidamente, con sempre più donne che si uniscono alla missione dell'azienda.</p>
-						</article>
-
-						<article>
-							<div class="image featured"><img src="images/pic03.jpg" alt="" /></div>
-							<header>
-								<h3>Riconoscimenti e premi✅</h3>
-							</header>
-							<p>TechnicallyEqual viene premiata a livello nazionale e internazionale per il suo impegno nell'empowerment delle donne e l'innovazione.</p>
-						</article>
-
-						<article>
-							<div class="image featured"><img src="images/pic04.jpg" alt="" /></div>
-							<header>
-								<h3>Sviluppo di piattaforme✅</h3>
-							</header>
-							<p>TechnicallyEqual lancia piattaforme online innovative per l'apprendimento interattivo e il networking delle donne nel campo tecnologico.</p>
-						</article>
-
-						<article>
-							<div class="image featured"><img src="images/pic05.jpg" alt="" /></div>
-							<header>
-								<h3>Collaborazione con istituti✅</h3>
-							</header>
-							<p>TechnicallyEqual stabilisce partnership con istituti accademici di prestigio per offrire programmi di formazione per le donne nel digitale.</p>
-						</article>
-
-						<article>
-							<div class="image featured"><img src="images/pic00.jpg" alt="" /></div>
-							<header>
-								<h3>Lancio dell'azienda✅</h3>
-							</header>
-							<p>TechnicallyEqual viene fondata da Gaia, Andrei e Biagio, con l'obiettivo di promuovere l'empowerment delle donne nel campo tecnologico</p>
-						</article>
-
-
-					</div>
-				</section>
 
 			<!-- Main -->
-				<div class="wrapper style2">
+				<div class="wrapper style1">
 
-					<article id="main" class="container special">
-						<div class="image featured"><img src="images/header1.jpg" alt="" /></a>
-						<header>
-							<h2><a href="#">La nostra storia di successo nell'empowerment delle donne nel digitale</a></h2>
+					<div class="container">
+						<article id="main" class="special">
+							<header>
+								<h2><a href="#">CareerPath</a></h2>
+								<p>
+									Morbi convallis lectus malesuada sed fermentum dolore amet
+								</p>
+							</header>
+							<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 							<p>
-								Scopri la nostra ispirante storia dietro TechnicallyEqual, un'azienda che si impegna a promuovere l'inclusione e l'empowerment delle donne nel campo digitale. Dalla passione di Gaia, fondatrice di TechnicallyEqual, alla collaborazione con esperti del settore come Andrei e Biagio, il nostro percorso riflette la determinazione nel superare le barriere di genere e creare un ambiente tecnologico più equo.
-			
+								Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
+								posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
+								lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
+								consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
+								interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
+								natoque aenean scelerisque vel lacinia mollis quam sodales congue.
 							</p>
-						</header>
-						<p>
-							La storia di TechnicallyEqual inizia con Gaia, una giovane donna appassionata di tecnologia fin dall'infanzia. Sin da piccola, Gaia si è affascinata dal potere trasformativo dell'informatica e dal ruolo che la tecnologia gioca nella nostra società. Tuttavia, mentre progrediva nel suo percorso di studio e carriera, Gaia ha iniziato a riconoscere le sfide e le disparità che le donne affrontano nel campo tecnologico.
-
-							<br>Determinata a fare la differenza e ad affrontare queste sfide....
-						</p>
-						<footer>
-							<a href="about us.html" class="button">Continua a leggere</a>
-						</footer>
-					</article>
+							<section>
+								<header>
+									<h3>Ultrices tempor sagittis nisl</h3>
+								</header>
+								<p>
+									Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
+									at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
+									feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
+									fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
+									egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+								</p>
+								<p>
+									Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
+									orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
+									ut penatibus fermentum nibh erat malesuada varius.
+								</p>
+							</section>
+							<section>
+								<header>
+									<h3>Augue euismod feugiat tempus</h3>
+								</header>
+								<p>
+									Pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
+									feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
+									ut nunc urna volutpat donec cubilia commodo risus morbi. Lobortis vestibulum velit malesuada ante
+									egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
+								</p>
+							</section>
+						</article>
+						<hr />
+						<div class="row">
+							<article class="col-4 col-12-mobile special">
+								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+								<header>
+									<h3><a href="#">Gravida aliquam penatibus</a></h3>
+								</header>
+								<p>
+									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
+									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+								</p>
+							</article>
+							<article class="col-4 col-12-mobile special">
+								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+								<header>
+									<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+								</header>
+								<p>
+									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
+									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+								</p>
+							</article>
+							<article class="col-4 col-12-mobile special">
+								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<header>
+									<h3><a href="#">Magna laoreet et aliquam</a></h3>
+								</header>
+								<p>
+									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
+									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+								</p>
+							</article>
+						</div>
+					</div>
 
 				</div>
-
-				<!-- Carousel -->
-				<section class="carousel">
-					<h2>I NOSTRI <strong> PRODOTTI</strong> </h2>
-					<div class="reel">
-						<article>
-							<div class="image featured"><a href="TechLearn.html"><img src="images/TechLearn.png" alt="" /></a></div>
-							<header>
-								<h3>TechLearn</h3>
-							</header>
-							<a href="TechLearn.html"><p>Una piattaforma di apprendimento online che offre corsi interattivi su diverse aree dell'informatica, inclusi sviluppo web, data science e programmazione. Questa piattaforma avrebbe un focus particolare su contenuti rilevanti e risorse per promuovere l'inclusione femminile.</p></a>
-						</article>
-
-						<article>
-							<div class="image featured"><a href="CareerPath.html"><img src="images/CareerPath.png" alt="" /></a> </div>
-							<header>
-								<h3>CareerPath</h3>
-							</header>
-							<a href="CareerPath.html"><p> Un'applicazione che fornisce una guida personalizzata per le donne che desiderano intraprendere una carriera nel settore tecnologico. L'app aiuta a identificare le competenze necessarie, suggerisce percorsi di apprendimento e offre consigli su come accedere a opportunità nel campo informatico.</p></a>
-						</article>
-
-						<article>
-							<div class="image featured"><a href="InclusiveCode.html"><img src="images/InclusiveCode.png" alt="" /></a></div>
-							<header>
-								<h3>InclusiveCode</h3>
-							</header>
-							<a href="InclusiveCode.html"><p>Uno strumento di sviluppo software che promuove la scrittura di codice inclusivo, fornendo suggerimenti e correzioni automatiche per evitare stereotipi di genere o linguaggio offensivo nei commenti del codice.<br><br><br> </p></a>
-						</article>
-
-						<article>
-							<div class="image featured"><a href="TechConnect.html"><img src="images/TechConnect.png" alt="" /></a></div>
-							<header>
-								<h3>TechConnect</h3>
-							</header>
-							<a href="TechConnect.html"><p>Una piattaforma di networking online che permette alle donne nel campo tecnologico di connettersi tra loro, condividere esperienze e opportunità di lavoro, e collaborare su progetti. Questa piattaforma favorisce la creazione di una comunità solida e supportiva per le donne.</p></a>
-						</article>
-
-						<article>
-							<div class="image featured"><a href="DiversityAnalytics.html"><img src="images/DiversityAnalystics.png" alt="" /></a></div>
-							<header>
-								<h3>DiversityAnalytics</h3>
-							</header>
-							<a href="DiversityAnalytics.html"><p>Un software di analisi che raccoglie dati sull'equilibrio di genere e sulle disparità nel campo dell'informatica.Questo software fornisce statistiche e report dettagliati per aiutare le aziende e le organizzazioni a valutare e migliorare la diversità di genere all'interno dei loro team tecnici.</p></a>
-						</article>
-
-
-					</div>
-				</section>
 
 			<!-- Footer -->
 				<div id="footer">
