--- a/TechLearn.html
+++ b/TechLearn.html
@@ -54,7 +54,7 @@
 							<header>
 								<h2><a href="#">TechLearn</a></h2>
 								<p>
-									Morbi convallis lectus malesuada sed fermentum dolore amet
+									Test
 								</p>
 							</header>
 							<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
