--- a/about us.html
+++ b/about us.html
@@ -26,22 +26,23 @@
 						</div>
 
 					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Our Products</a>
-									<ul>
-										<li><a href="#">TechLearn</a></li>
-										<li><a href="#">CareerPath</a></li>
-										<li><a href="#">InclusiveCode</a></li>
-										<li><a href="#">TechConnect</a></li>
-										<li><a href="#">DiversityAnalytics</a></li>
-									</ul>
-								</li>
-								<li><a href="#">About Us</a></li>
-							</ul>
-						</nav>
+					<nav id="nav">
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li>
+								<a href="our products.html">Our Products</a>
+								<ul>
+									<li><a href="our products.html#TechLearn">TechLearn</a></li>
+									<li><a href="our products.html#CareerPath">CareerPath</a></li>
+									<li><a href="our products.html#InclusiveCode">InclusiveCode</a></li>
+									<li><a href="our products.html#TechConnect">TechConnect</a></li>
+									<li><a href="our products.html#DiversityAnalytics">DiversityAnalytics</a></li>
+								</ul>
+							</li>
+							<li><a href="#">About Us</a></li>
+						</ul>
+					</nav>
+
 
 				</div>
 
@@ -168,14 +169,14 @@
 						<hr />
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/Andrei.jpg" alt="" /></a>
+								<a href="images/Curiculum-Andrei.png" class="image featured"><img src="images/Andrei.jpg" alt="" /></a>
 								<header>
 									<h3>Robert Andrei Paduraru</h3>
 									<h5>Chief Technology Officer</h5>
 								</header>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/Gaia.jpg" alt="" /></a>
+								<a href="images/Curiculum-Gaia.png" class="image featured"><img src="images/Gaia.jpg" alt="" /></a>
 								<header>
 									<h3>Gaia Moratti</h3>
 									<h5>Chief Executive Officer <br> FOUNDER</h5>
