--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 							<ul>
 								<li><a href="#">Home</a></li>
 								<li>
-									<a href="#">Our Products</a>
+									<a href="our products.html">Our Products</a>
 									<ul>
-										<li><a href="TechLearn.html">TechLearn</a></li>
-										<li><a href="CareerPath.html">CareerPath</a></li>
-										<li><a href="InclusiveCode.html">InclusiveCode</a></li>
-										<li><a href="TechConnect.html">TechConnect</a></li>
-										<li><a href="DiversityAnalytics.html">DiversityAnalytics</a></li>
+										<li><a href="our products.html#TechLearn">TechLearn</a></li>
+										<li><a href="our products.html#CareerPath">CareerPath</a></li>
+										<li><a href="our products.html#InclusiveCode">InclusiveCode</a></li>
+										<li><a href="our products.html#TechConnect">TechConnect</a></li>
+										<li><a href="our products.html#DiversityAnalytics">DiversityAnalytics</a></li>
 									</ul>
 								</li>
 								<li><a href="about us.html">About Us</a></li>
@@ -143,43 +143,43 @@
 					<h2>I NOSTRI <strong> PRODOTTI</strong> </h2>
 					<div class="reel">
 						<article>
-							<div class="image featured"><a href="TechLearn.html"><img src="images/TechLearn.png" alt="" /></a></div>
+							<div class="image featured"><a href="our products.html#TechLearn"><img src="images/TechLearn.png" alt="" /></a></div>
 							<header>
 								<h3>TechLearn</h3>
 							</header>
-							<a href="TechLearn.html"><p>Una piattaforma di apprendimento online che offre corsi interattivi su diverse aree dell'informatica, inclusi sviluppo web, data science e programmazione. Questa piattaforma avrebbe un focus particolare su contenuti rilevanti e risorse per promuovere l'inclusione femminile.</p></a>
+							<a href="our products.html#TechLearn"><p>Una piattaforma di apprendimento online che offre corsi interattivi su diverse aree dell'informatica, inclusi sviluppo web, data science e programmazione. Questa piattaforma avrebbe un focus particolare su contenuti rilevanti e risorse per promuovere l'inclusione femminile.</p></a>
 						</article>
 
 						<article>
-							<div class="image featured"><a href="CareerPath.html"><img src="images/CareerPath.png" alt="" /></a> </div>
+							<div class="image featured"><a href="our products.html#CareerPath"><img src="images/CareerPath.png" alt="" /></a> </div>
 							<header>
 								<h3>CareerPath</h3>
 							</header>
-							<a href="CareerPath.html"><p> Un'applicazione che fornisce una guida personalizzata per le donne che desiderano intraprendere una carriera nel settore tecnologico. L'app aiuta a identificare le competenze necessarie, suggerisce percorsi di apprendimento e offre consigli su come accedere a opportunità nel campo informatico.</p></a>
+							<a href="CareerPath.html"><p> Un'applicazione che fornisce una guida personalizzata per le donne che desiderano una carriera nel settore tecnologico. CarrAI, l'assistente AI integrato nell'app, aiuta a identificare le competenze necessarie e offre consigli su come accedere a opportunità nel campo informatico.</p></a>
 						</article>
 
 						<article>
-							<div class="image featured"><a href="InclusiveCode.html"><img src="images/InclusiveCode.png" alt="" /></a></div>
+							<div class="image featured"><a href="our products.html#InclusiveCode"><img src="images/InclusiveCode.png" alt="" /></a></div>
 							<header>
 								<h3>InclusiveCode</h3>
 							</header>
-							<a href="InclusiveCode.html"><p>Uno strumento di sviluppo software che promuove la scrittura di codice inclusivo, fornendo suggerimenti e correzioni automatiche per evitare stereotipi di genere o linguaggio offensivo nei commenti del codice.<br><br><br> </p></a>
+							<a href="our products.html#InclusiveCode"><p>Uno strumento di sviluppo software che promuove la scrittura di codice inclusivo, fornendo suggerimenti e correzioni automatiche per evitare stereotipi di genere o linguaggio offensivo nei commenti del codice.<br><br><br> </p></a>
 						</article>
 
 						<article>
-							<div class="image featured"><a href="TechConnect.html"><img src="images/TechConnect.png" alt="" /></a></div>
+							<div class="image featured"><a href="our products.html#TechConnect"><img src="images/TechConnect.png" alt="" /></a></div>
 							<header>
 								<h3>TechConnect</h3>
 							</header>
-							<a href="TechConnect.html"><p>Una piattaforma di networking online che permette alle donne nel campo tecnologico di connettersi tra loro, condividere esperienze e opportunità di lavoro, e collaborare su progetti. Questa piattaforma favorisce la creazione di una comunità solida e supportiva per le donne.</p></a>
+							<a href="our products.html#TechConnect"><p>Una piattaforma di networking online che permette alle donne nel campo tecnologico di connettersi tra loro, condividere esperienze e opportunità di lavoro, e collaborare su progetti. Questa piattaforma favorisce la creazione di una comunità solida e supportiva per le donne.</p></a>
 						</article>
 
 						<article>
-							<div class="image featured"><a href="DiversityAnalytics.html"><img src="images/DiversityAnalystics.png" alt="" /></a></div>
+							<div class="image featured"><a href="our products.html#DiversityAnalytics"><img src="images/DiversityAnalystics.png" alt="" /></a></div>
 							<header>
 								<h3>DiversityAnalytics</h3>
 							</header>
-							<a href="DiversityAnalytics.html"><p>Un software di analisi che raccoglie dati sull'equilibrio di genere e sulle disparità nel campo dell'informatica.Questo software fornisce statistiche e report dettagliati per aiutare le aziende e le organizzazioni a valutare e migliorare la diversità di genere all'interno dei loro team tecnici.</p></a>
+							<a href="our products.html#DiversityAnalytics"><p>Un software di analisi che raccoglie dati sull'equilibrio di genere e sulle disparità nel campo dell'informatica.Questo software fornisce statistiche e report dettagliati per aiutare le aziende e le organizzazioni a valutare e migliorare la diversità di genere all'interno dei loro team tecnici.</p></a>
 						</article>
 
 
