added the last features to AboutUs

--- a/about us.html
+++ b/about us.html
@@ -70,6 +70,7 @@
 										</ol>
 											
 									</section>
+									<section>
 										<header>
 											<h3>Come tre persone hanno creato un'azienda per promuovere l'inclusione di genere nel settore tecnologico</h3>
 										</header>
@@ -94,75 +95,70 @@
 								<hr class="first" />
 								<section>
 									<header>
-										<h3><a href="#">Accumsan sed penatibus</a></h3>
+										<h3><a href="#">Il Progetto</a></h3>
 									</header>
 									<p>
-										Dolor sed fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-										porttitor phasellus tempus cubilia ultrices tempor sagittis  tellus ante diam nec penatibus dolor cras
-										magna tempus feugiat veroeros.
-									</p>
+										Cliccando su questo pulsante, avrai accesso a una relazione esaustiva che racconta l'emozionante percorso del team nel backstage di TechnicallyEqual nel promuovere l'empowerment delle donne nel settore digitale. All'interno della relazione, troverai anche dettagliate informazioni su come il team ha realizzato l'intero progetto, dalle prime fasi di pianificazione e sviluppo fino alla sua implementazione e impatto nel settore.									</p>
 									<footer>
-										<a href="#" class="button">Learn More</a>
+										<a href="https://docs.google.com/document/d/19LiLnCH7yGTQPjttiwchZUjGCRvmMKuK/edit?usp=sharing&ouid=110705091845379749281&rtpof=true&sd=true" class="button">Vedi la relazione</a>
 									</footer>
 								</section>
 								<hr />
 								<section>
 									<header>
-										<h3><a href="#">Sed lorem etiam consequat</a></h3>
+										<h3><a href="our products.html">Update recenti</a></h3>
 									</header>
 									<p>
-										Tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+										Scopri gli ultimi aggiornamenti delle nostre app!
 									</p>
 									<div class="row gtr-50">
 										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+											<a href="our products.html#TechLearn" class="image fit"><img src="images/TechLearn.png" alt="" /></a>
 										</div>
 										<div class="col-8">
-											<h4>Nibh sed cubilia</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
+											<h4>TechLearn</h4>
+											<a href="our products.html#TechLearn"><p>
+												TechLearn 20.1 ha nuovi corsi disponibili, per ampliare le tue competenze nel campo dell'intelligenza artificiale, sviluppo mobile e gestione dei dati
+											</p></a>
 										</div>
 										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
+											<a href="our products.html#TechConnect" class="image fit"><img src="images/TechConnect.png" alt="" /></a>
 										</div>
 										<div class="col-8">
-											<h4>Proin sed adipiscing</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
+											<h4>TechConnect</h4>
+											<a href="our products.html#TechConnect"><p>
+												TechConnect 30.5 include l'aggiunta di un calendario degli eventi per tenere traccia di webinar, conferenze e workshop relativi al digitale, e anche di di gruppi di interesse per consentire agli utenti di connettersi in base alle loro aree di specializzazione o interessi comuni
+											</p></a>
 										</div>
 										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
+											<a href="our products.html#CareerPath" class="image fit"><img src="images/CareerPath.png" alt="" /></a>
 										</div>
 										<div class="col-8">
-											<h4>Lorem feugiat magna</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
+											<h4>CareerPath</h4>
+											<a href="our products.html#CareerPath"><p>
+												CareerPath 10.1 include miglioramenti dell'algoritmo di corrispondenza delle competenze per fornire suggerimenti di carriera più precisi e personalizzati, e l'integrazione con piattaforme di reclutamento per semplificare il processo di candidatura per le posizioni desiderate.
+											</p></a>
 										</div>
 										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
+											<a href="our products.html#DiversityAnalytics" class="image fit"><img src="images/DiversityAnalystics.png" alt="" /></a>
 										</div>
 										<div class="col-8">
-											<h4>Sed tempus fringilla</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
+											<h4>DiversityAnalytics</h4>
+											<a href="our products.html#DiversityAnalytics"><p>
+												DiversityAnalystics 5.0 ha nuove metriche e grafici per fornire una panoramica più completa della diversità di genere nel settore tecnologico. 
+											</p></a>
 										</div>
 										<div class="col-4">
-											<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
+											<a href="our products.html#InclusiveCode" class="image fit"><img src="images/InclusiveCode.png" alt="" /></a>
 										</div>
 										<div class="col-8">
-											<h4>Malesuada fermentum</h4>
-											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
-											</p>
+											<h4>InclusiveCode</h4>
+											<a href="our products.html#InclusiveCode"></a><p>
+												InclusiveCode 15.9 si aggiorna con nuove funzioni, come il fornimento di suggerimenti per evitare stereotipi di genere nei commenti del codice e aggiornamenti dell'intelligenza artificiale per una rilevazione più accurata di stereotipi di genere o linguaggio offensivo
+											</p></a>
 										</div>
 									</div>
-									<footer>
-										<a href="#" class="button">Magna Adipiscing</a>
-									</footer>
+									
 								</section>
 							</div>
 						</div>
@@ -184,7 +180,7 @@
 								</header>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/Biagio.jpg" alt="" /></a>
+								<a href="images/Curiculum-Biagio.png" class="image featured"><img src="images/Biagio.jpg" alt="" /></a>
 								<header>
 									<h3>Biagio Formia</h3>
 									<h5>Chief Marketing Officer </h5>
