--- a/our products.html
+++ b/our products.html
@@ -52,7 +52,7 @@
 
 					<div class="container">
 						<article id="main" class="special">
-							<a href="#" class="image banner"><img src="images/Products banner testing.png" alt="" /></a>
+							<a href="#" class="image banner"><img src="images/Products banner.png" alt="" /></a>
 						
 						</article>
 						<hr />
