--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<img src="images/logo.png" alt="" class="image featured">
+								<img src="images/logo.png" alt="" class="image ">
 								<h1><a href="index.html" id="logo">TechnicallyEqual</a></h1>
 							</header>
 							
